# ginjer_exercice

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  product_categorisation.json  pyproject.toml
data/taxonomies/: canonical.json
docs/: DEPLOYMENT.md  USAGE.md
prompts/: classification.yaml  fallback_enriched.yaml  judge.yaml  name_extraction.yaml  products.yaml  taxonomy_generation.yaml  universe.yaml
scripts/: e2e_process_ad_cli_multimodal.py  find_step5_candidates.py  manual_phase5_check.py  real_pipeline_check.py  seed_prompts.py  smoke.py  smoke_data_access.py  test_lf.py  validate_process_ad_real_e2e.py
src/ginjer_exercice/: __init__.py  cli.py  config.py  exceptions.py
src/ginjer_exercice/data_access/: __init__.py  bigquery_client.py  catalog_provider.py  media_fetcher.py  results_repository.py
src/ginjer_exercice/llm/: base.py  factory.py  gemini_provider.py  openai_provider.py
src/ginjer_exercice/observability/: __init__.py  client.py  prompts.py  runtime_warnings.py  scoring.py  tracing.py
src/ginjer_exercice/pipeline/: __init__.py  _helpers.py  orchestrator.py  step1_universe.py  step2_products.py  step3_classify.py  (+2 more)
tests/integration/: test_bigquery_live.py
tests/unit/: pipeline_fakes.py  test_bigquery_client.py  test_catalog_provider.py  test_cli.py  test_llm.py  test_media_fetcher.py  test_orchestrator.py  test_prompts.py  test_results_repository.py  test_step1_universe.py  test_step2_products.py  test_step3_classify.py  test_step4_name.py  test_step5_fallback.py  test_taxonomy.py  test_tracing.py  test_web_search.py
(+16 files in other folders)
